[gd_scene load_steps=12 format=3 uid="uid://05mwbm41y5a1"]

[ext_resource type="LabelSettings" uid="uid://cuqghwtdf0bxd" path="res://Cenas/hud e menus/tres/title_label_settings.tres" id="1_1djae"]
[ext_resource type="Script" uid="uid://g523ra776iqg" path="res://Scripts/hud e menus/menu.gd" id="1_rwb3b"]
[ext_resource type="Theme" uid="uid://bbr5200q147wf" path="res://Cenas/hud e menus/tres/botao_menu_principal.tres" id="3_rwb3b"]
[ext_resource type="Texture2D" uid="uid://djab2a62ludu1" path="res://Assets/sprites/player_breathing.png" id="4_ua8by"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lf1rb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xn3cf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1u7sj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s1d4j"]

[sub_resource type="Animation" id="Animation_ua8by"]
resource_name = "idle"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_ica3m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7fsho"]
_data = {
&"RESET": SubResource("Animation_ica3m"),
&"idle": SubResource("Animation_ua8by")
}

[node name="menu_principal" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rwb3b")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1152.0
offset_bottom = 650.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.102998, 0.119671, 0.185393, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 648.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="título" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Cavaleiro dos Circuitos"
label_settings = ExtResource("1_1djae")

[node name="TextureRect" type="TextureRect" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60
theme_override_styles/separator = SubResource("StyleBoxEmpty_lf1rb")

[node name="start" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_rwb3b")
text = "Start"

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_xn3cf")

[node name="créditos" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_rwb3b")
text = "Créditos"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_1u7sj")

[node name="opcoes" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_rwb3b")
text = "Opções"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_s1d4j")

[node name="sair" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_rwb3b")
text = "Sair"

[node name="bixinsafado" type="Sprite2D" parent="."]
position = Vector2(573, 76)
scale = Vector2(6.91667, 6.91667)
texture = ExtResource("4_ua8by")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="bixinsafado"]
libraries = {
&"": SubResource("AnimationLibrary_7fsho")
}
autoplay = "idle"
speed_scale = 0.5

[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/créditos" to="." method="_on_créditos_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/opcoes" to="." method="_on_opcoes_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/sair" to="." method="_on_sair_pressed"]
